--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -205,24 +205,24 @@
  HOL_conservatives_ADJ:0 "네덜란드"
  HOL_communism_ADJ:0 "바타비아"
 
- CZE_fascism:0 "보헤미아 제국"
- CZE_fascism_DEF:0 "보헤미아 제국"
- CZE_democratic:0 "체코 공화국"
- CZE_democratic_DEF:0 "체코 공화국"
- CZE_conservatives:0 "체코 공화국"
- CZE_conservatives_DEF:0 "체코 공화국"
- CZE_conservatives_ADJ:0 "체코"
- CZE_socialist:0 "체코 공화국"
- CZE_socialist_DEF:0 "체코 공화국"
- CZE_socialist_ADJ:0 "체코"
- CZE_neutrality:0 "체코"
- CZE_neutrality_DEF:0 "체코"
- CZE_communism:0 "보헤미아-모라비아 연합"
- CZE_communism_DEF:0 "보헤미아-모라비아 연합"
- CZE_fascism_ADJ:0 "보헤미아"
- CZE_democratic_ADJ:0 "체코"
- CZE_neutrality_ADJ:0 "체코"
- CZE_communism_ADJ:0 "보헤미아-모라비아"
+ CZE_fascism:0 "체코슬로바키아국"
+ CZE_fascism_DEF:0 "체코슬로바키아국"
+ CZE_democratic:0 "체코슬로바키아 공화국"
+ CZE_democratic_DEF:0 "체코슬로바키아 공화국"
+ CZE_democratic_ADJ:0 "체코슬로바키아"
+ CZE_conservatives:0 "체코슬로바키아 공화국"
+ CZE_conservatives_DEF:0 "체코슬로바키아 공화국"
+ CZE_conservatives_ADJ:0 "체코슬로바키아"
+ CZE_socialist:0 "체코슬로바키아"
+ CZE_socialist_DEF:0 "체코슬로바키아 공화국"
+ CZE_socialist_ADJ:0 "체코슬로바키아"
+ CZE_neutrality:0 "체코슬로바키아 왕국"
+ CZE_neutrality_DEF:0 "체코슬로바키아 왕국"
+ CZE_communism:0 "체코슬로바키아 인민공화국"
+ CZE_communism_DEF:0 "체코슬로바키아 인민공화국"
+ CZE_fascism_ADJ:0 "체코슬로바키아"
+ CZE_neutrality_ADJ:0 "체코슬로바키아"
+ CZE_communism_ADJ:0 "체코슬로바키아"
 
  POL_fascism:0 "폴란드국"
  POL_fascism_DEF:0 "폴란드국"
@@ -1046,8 +1046,8 @@
  SIA_democratic_ADJ:0 "태국"
  SIA_neutrality_ADJ:0 "시암"
  SIA_communism_ADJ:0 "태국"
- SIK_fascism:0 "신강독재정"
- SIK_fascism_DEF:0 "신강독재정"
+ SIK_fascism:0 "퉁가니스탄 군벌"
+ SIK_fascism_DEF:0 "퉁가니스탄 군벌"
  SIK_democratic:0 "신강독립공화국"
  SIK_democratic_DEF:0 "신강독립공화국"
  SIK_neutrality:0 "신강군벌"
@@ -1306,10 +1306,10 @@
  SHX_fascism_DEF:0 "국민주의 중국"
  SHX_democratic:0 "중화민국"
  SHX_democratic_DEF:0 "중화민국"
- SHX_neutrality:0 "청나라"
- SHX_neutrality_DEF:0 "청나라"
- SHX_communism:0 "중화인민공화국"
- SHX_communism_DEF:0 "중화인민공화국"
+ SHX_neutrality:0 "청 제국"
+ SHX_neutrality_DEF:0 "청 제국"
+ SHX_communism:0 "중화소비에트공화국"
+ SHX_communism_DEF:0 "중화소비에트공화국"
  SHX_fascism_ADJ:0 "중국"
  SHX_democratic_ADJ:0 "중국"
  SHX_neutrality_ADJ:0 "중국"
