--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -28,6 +28,8 @@
  JET_ENGINES_SPECIAL:0 "제트 엔진의 개발은 제트 비행기를 개발하기 위한 필수적인 선결요소입니다. 보다 개선된 비행기를 개발하기 위해선 이 기술이 연구되어야 합니다."
  jet_engines_desc:0 "획기적인 추진 기술인 제트엔진은 완전히 새로운 차세대 항공기의 개발을 가능케 할 것입니다."
  convoy_1:0 "수송선"
+ armored_car_equipment:0 "장갑차"
+ armored_car_equipment_desc:0 "경장갑을 갖춘 차륜차량입니다. 정찰과 저항 억제에 흔히 사용되며, 더욱 무거운 무기를 장착할 수 있습니다."
  motorized_equipment:0 "차량화"
  motorized_equipment_desc:0 "트럭을 비롯한 차량들은 야전에서 병력을 수송하는 용도로 사용됩니다."
  motorized_equipment_1:0 "차량화"
@@ -1723,7 +1725,10 @@
  RUS_modern_tank_aa_equipment_1_short:0 "ZSU-57-2"
  #RUS_modern_tank_aa_equipment_1_desc:0 ""
  GER_motorized_equipment_1:0 "오펠 블리츠"
- AUS_motorized_equipment_1:0 "오펠 블리츠"
+ AUS_motorized_equipment_1:0 "오스트로-다임러 겔렌델라스트바겐"
+ AUS_motorized_equipment_1_short:0 "ADGR"
+ AUS_gw_armored_car_equipment:0 "슈트라센판처바겐 ADGZ"
+ AUS_gw_armored_car_equipment_short:0 "슈타이어 ADGZ"
  SWE_motorized_equipment_1:0 "스카니아-바비스"
  FRA_motorized_equipment_1:0 "시트로엥 U23"
  ENG_motorized_equipment_1:1 "오스틴 K5"
@@ -2262,6 +2267,78 @@
  infantry_equipment_3:0 "보병 장비 III"
  infantry_equipment_3_short:0 "화기 III"
  infantry_equipment_3_desc:0 "개인과 승무원들에게 지급되는 보병화기로 군인에게 필요로 하는 다양한 소도구들을 포함하고 있습니다. 게다가 현대화된 개인 돌격소총과 대전차 로켓을 포함하고 있습니다."
+
+ gw_armored_car_equipment:0 "전간기 장갑차"
+ gw_armored_car_equipment_desc:0 "이전의 장갑차가 단순히 상용 차량에 얇은 강철판을 두른 것이었다면, 이 모델은 처음부터 장갑과 가벼운 무장을 달도록 설계되었습니다."
+ armored_car_equipment_1:0 "기본 장갑차"
+ armored_car_equipment_1_desc:0 "개선된 내부 배치와 추가적인 탄약고로 보다 효과적인 장갑차가 탄생했습니다."
+ armored_car_equipment_2:0 "향상된 장갑차"
+ armored_car_equipment_2_desc:0 "전장의 변화는 경보병부대를 물리치고 사라남기 위해 더 무거운 무장과 두꺼운 장갑을 요구했습니다."
+ armored_car_at_equipment:0 "대전차 장갑차"
+ armored_car_at_equipment_desc:0 "우리의 경기계화부대는 언젠가 적 전차부대와 접촉하게 될 것입니다. 특별한 대전차 파생 모델을 개발하는 것은 그들에게 싸울 수 있는 기회를 줄 것입니다."
+
+ GER_gw_armored_car_equipment:0 "존더크라프트파흐초익 222"
+ GER_gw_armored_car_equipment_short:0 "Sdkfz 222"
+ GER_armored_car_equipment_1:0 "존더크라프트파흐초익 231 8륜형"
+ GER_armored_car_equipment_1_short:0 "Sdkfz 231"
+ GER_armored_car_equipment_2:0 "존더크라프트파흐초익 234 "푸마""
+ GER_armored_car_equipment_2_short:0 "푸마"
+ GER_armored_car_at_equipment:0 "Sdkfz 234/4 "파크바겐""
+ GER_armored_car_at_equipment_short:0 "파크바겐"
+
+ USA_gw_armored_car_equipment:0 "M1 장갑차"
+ USA_gw_armored_car_equipment_short:0 "M1"
+ USA_armored_car_equipment_1:0 "M3 스카웃 카"
+ USA_armored_car_equipment_1_short:0 "M3"
+ USA_armored_car_equipment_2:0 "M8 그레이하운드"
+ USA_armored_car_equipment_2_short:0 "M8"
+ USA_armored_car_at_equipment:0 "M38 90mm 포탑"
+ USA_armored_car_at_equipment_short:0 "M38"
+
+ ENG_gw_armored_car_equipment:0 "다임러 딩고"
+ ENG_gw_armored_car_equipment_short:0 "딩고"
+ ENG_armored_car_equipment_1:0 "험버 장갑차"
+ ENG_armored_car_equipment_1_short:0 "험버"
+ ENG_armored_car_equipment_2:0 "AEC 장갑차"
+ ENG_armored_car_equipment_2_short:0 "AEC"
+ ENG_armored_car_at_equipment:0 "AEC 6-파운드 포"
+ ENG_armored_car_at_equipment_short:0 "AEC 6pdr."
+
+ SOV_gw_armored_car_equipment:0 "BA-10"
+ SOV_gw_armored_car_equipment_short:0 "BA-10"
+ SOV_armored_car_equipment_1:0 "BA-20"
+ SOV_armored_car_equipment_1_short:0 "BA-20"
+ SOV_armored_car_equipment_2:0 "BA-64"
+ SOV_armored_car_equipment_2_short:0 "BA-64"
+ SOV_armored_car_at_equipment:0 "BA-64E-37"
+ SOV_armored_car_at_equipment_short:0 "BA-64E-37"
+
+ ITA_gw_armored_car_equipment:0 "피아트 AB611"
+ ITA_gw_armored_car_equipment_short:0 "AB611"
+ ITA_armored_car_equipment_1:0 "AB40"
+ ITA_armored_car_equipment_1_short:0 "AB40"
+ ITA_armored_car_equipment_2:0 "AS.42 사아리아나"
+ ITA_armored_car_equipment_2_short:0 "AS.42"
+ ITA_armored_car_at_equipment:0 "AS.42 47/32"
+ ITA_armored_car_at_equipment_short:0 "AS.42 47/32"
+
+ JAP_gw_armored_car_equipment:0 "92식 오사카"
+ JAP_gw_armored_car_equipment_short:0 "오사카"
+ JAP_armored_car_equipment_1:0 "92식 치요다"
+ JAP_armored_car_equipment_1_short:0 "치요다"
+ JAP_armored_car_equipment_2:0 "93식 고쿠산"
+ JAP_armored_car_equipment_2_short:0 "고쿠산"
+ JAP_armored_car_at_equipment:0 "4식 장갑차"
+ JAP_armored_car_at_equipment_short:0 "4식 장갑차"
+
+ FRA_gw_armored_car_equipment:0 "라플리 S15"
+ FRA_gw_armored_car_equipment_short:0 "S15"
+ FRA_armored_car_equipment_1:0 "파나르 165"
+ FRA_armored_car_equipment_1_short:0 "파나르 165"
+ FRA_armored_car_equipment_2:0 "파나르 178"
+ FRA_armored_car_equipment_2_short:0 "파나르 178"
+ FRA_armored_car_at_equipment:0 "특수차량 207"
+ FRA_armored_car_at_equipment_short:0 "V.S. 207"
  
  # small arms
  
