--- a/localisation/fra_l_english.yml
+++ b/localisation/fra_l_english.yml
@@ -267,11 +267,15 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  #some tooltips
  fra_indochina_wargoals_tt:0 "이 국가 중점은 프랑스가 이전의 아시아 식민지에 대항하여 전쟁을 벌일 수 있도록 해줄 것입니다.\n"
  fra_north_africa_wargoals_tt:0 "이 국가 중점은 프랑스가 이전의 지중해 속지에 대항하여 전쟁을 벌일 수 있도록 해줄 것입니다.\n"
+ FRA_civil_war_support_tt:0 "§R다른 정당들의 지지도에 따라, 내전이 일어날 것입니다. 비국민주의 정당에 대한 지지가 10% 미만이면 내전은 없을 것입니다.§"
 
  FRA_duclos:0 "자크 뒤클로가 권력을 잡음"
- FRA_democratic_pop_front:0 "인민전선은 에두아르 달라디에 휘하로 통합됨"
- FRA_socialist_pop_front:0 "인민전선은 레옹 블룸 휘하로 통합됨"
+ FRA_democratic_pop_front:0 "인민전선이 에두아르 달라디에 휘하로 통합됨"
+ FRA_socialist_pop_front:0 "인민전선이 레옹 블룸 휘하로 통합됨"
  FRA_conservative_pop_front:0 "민주공화동맹이 권력을 잡음"
+ FRA_trotsky_offered_service:0 "트로츠키가 복무함"
+ FRA_dealing_with_opposition:0 "정치적 행동을 취하는 중"
+ FRA_napoleon_can_return:0 "망명법 폐지됨"
 
  #Names
  FRA_state:0 "프랑스 제국"
@@ -283,6 +287,27 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  SYR_state_ADJ:0 "시리아"
 
  #Decisions
+ FRA_political_actions_decisions:0 "정부 개혁"
+ FRA_political_actions_decisions_desc:0 "프랑스 제3공화국은 많은 어려운 시기를 겪었습니다. 대전쟁 중 서부 전선의 베르덩 전투에서 여러 세대를 잃었습니다.\n\n프랑스는 여전히 건재했지만, 지금의 평화 시기에도 공화국은 고전하고 있습니다. 우리 정부는 취약하고 비효율적입니다. 프랑스의 정치체제는 여러 이념적 조직이 등장하면서 그 상황을 통제하기가 점점 더 어려워지고 있습니다.\n\n무너지기 전에 수리하고 고치는 일은 우리에게 달려 있습니다...\n\n마르크스주의자들의 영향력: [FRA_left_wing_influence] \n\n악시옹 프랑세즈의 영향력: [FRA_centre_wing_influence] \n\n공안위원회의 영향력: [FRA_right_wing_influence]\n"
+ FRA_arrest_communists_decision:0 "공산주의 정치인 체포"
+ FRA_supress_communists_decision:0 "공산주의 신문 탄압"
+ FRA_arrest_fascists_decision:0 "국민주의 정치인 체포"
+ FRA_supress_fascists_decision:0 "국민주의 신문 탄압"
+ FRA_expand_citizen_ship:0 "시민권 확대"
+ FRA_core_algiers:0 "블룸-비올레 제안"
+ FRA_devalue_franc_decision:0 "프랑화 평가절하"
+ FRA_ban_communism_decision:0 "공산주의 금지"
+ FRA_ban_fascism_decision:0 "동맹 금지"
+ FRA_allow_exiles:0 "왕실 귀환 허용"
+ FRA_recognize_bav:0 "남부 코뮌 인정"
+ FRA_support_bav:0 "남부 코뮌 지원 제공"
+ FRA_intervene_german_civil_war:0 "독일 내전 개입"
+ FRA_restrict_freedom_of_press:0 "언론의 자유 제한"
+ FRA_centralized_power_idea:0 "중앙집권화된 권력"
+ FRA_centralize_the_power:0 "권력 중앙집권화"
+ FRA_exiles_law_decision:0 "망명법 폐지"
+ FRA_exiles_law_decision_desc:0 "현재, 프랑스 왕실의 귀국은 헌법에 의해 금지되어 있습니다. 우리가 군주제로 돌아가기를 원한다면, 이 법은 폐지되어야 합니다."
+
  FRA_seek_new_alliances_decisions:0 "협상국 확대"
  FRA_seek_new_alliances_decisions_desc:0 "프랑스가 영국과 거리를 두기로 결정함에 따라, 이를 무마하기 위해, 우리는 유럽에서 새로운 잠재적 동맹국들을 찾아야 합니다."
  FRA_invite_Czechia:0 "체코와의 동맹"
@@ -322,6 +347,12 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  FRA_construction_russia:0 "러시아에 새로운 공장 건설"
 
  #Ideas
+ FRA_expanded_citizenship_idea:0 "확대된 시민권"
+ FRA_devalued_franc_idea:0 "프랑화 평가절화"
+ FRA_fascism_banned:0 "파시즘 금지"
+ 
+ FRA_leon_trotsky:0 "레프 트로츠키"
+
  FRA_counter_revolution_idea:0 "반혁명주의"
  FRA_constitutionalism_idea:0 "입헌 군주국"
  FRA_grande_armee_idea:0 "대육군"
@@ -491,14 +522,18 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  france.1036.a:0 "우호적인 서독을 수립하라."
  france.1036.b:0 "라인 서부를 점령하고, 서독을 복원하라."
  france.1036.c:0 "서독을 점령하라."
- 
+
  france.1037.t:0 "폭력이 고조되다!"
- france.1037.d:0 "혁명 패거리와 그 동료들의 예상치 못한 쿠데타에 이어 프랑스 노조가 총파업을 선언했습니다.\n\n파업은 폭력시위로 변했고 총이 발사되었습니다."
- france.1037.a:0 "이 사건에서 너무 심각한 일이 없길 바란다..."
+ france.1037.d:0 "많은 국민들이 정권 교체에 불만족하고 있으며 이제는 거리에서 찾아볼 수 있습니다.\n\n파업은 폭력 시위로 변했고 총이 발사되었습니다."
+ france.1037.a:0 "바라건대 이로부터 너무 심각한 일이 벌어지지 않기를..."
  
  france.1038.t:0 "남프랑스에서의 공산주의 봉기!"
  france.1038.d:0 "북부의 정권 교체에 불만을 품은 프랑스 남부인들은 이 문제를 스스로 해결하기로 결정했습니다.\n\n혁명군은 공산당과 상당수의 군 탈영병들과 함께 프랑스 주요 도시의 주요 행정 건물과 통신 초소를 점령했습니다.\n\n그들의 요구는 파리 정부가 물러나 반란을 일으키는 쪽에 평화적으로 권력을 이양하라는 것입니다."
  france.1038.a:0 "빨갱이들에게 죽음을!"
+
+ france.1039.t:0 "프랑스 내전!"
+ france.1039.d:0 "프랑스 수도에서의 성공적인 쿠데타에도 불구하고, 사실상의 통치 세력은 프랑스 본토를 통제하기 위해 애쓰고 있습니다. 프랑스는 [FRA.GetLeader]의 지도 하에 있는 국민주의 파벌과 자크 뒤클로 통치하의 공산주의 파벌이 대립하여 이전과는 달리 분열되어 있습니다.\n\n게다가, 상당수의 병사들이 공산주의 편에 가담했습니다.\n\n오직 시간만이 이 갈등이 어떻게 전개되는지 말해 줄 것입니다..."
+ france.1039.a:0 "이거 걱정되는군..."
  
  france.1039.t:0 "프랑스 내전!"
  france.1039.d:0 "프랑스 수도에서 쿠데타가 일어난 후, 민족주의 파벌들은 대전의 베테랑인 페텡 원수의 지휘 아래 프랑스 북부에서 가까스로 주도권을 쥐었습니다.\n\n그러나 쿠데타는 공산당이 주민의 지지를 누리고 있는 남부 지방으로 확대되지는 않았습니다. 더구나 상당수의 병사들이 공산측으로 피신해 버렸습니다.\n\n오직 시간만이 이 갈등이 어떻게 전개되는지를 말해줄 것입니다..."
@@ -543,6 +578,71 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  france.1048.d:0 "이번 주 초, 프랑스와 독일 국경, 특히 알자스-로렌 지역에서 일련의 교전이 있었습니다.\n\n프랑스 외무부는 즉각적인 휴전과 이번 사건에 대한 조사를 요구하고 있는 반면, 독일 외무부는 1914년 국경 분쟁과 유사한 독일군의 즉각적인 지역 점령에 대한 최후통첩을 프랑스에 발표했습니다.\n\n프랑스가 어떤 반응을 보일지는 알 수 없지만, 분석가들은 유럽 대륙에서 큰 전쟁이 일어날 것으로 예상합니다..."
  france.1048.a:0 "좋지 않다."
 
+ france.1049.t:0 "[FRA.GetLeader]의 프랑스 제위 주장"
+ france.1049.d:0 "프랑스-프로이센 전쟁에서 패배한 이후, 프랑스는 공화국이었습니다. 그러나 오늘 파리에서에서 거행된 대관식에서 [FRA.GetLeader] 측은 공식적으로 모든 프랑스인의 황제로 즉위했습니다.\n\n프랑스에서 군주정의 성공은 공화국 정부가 정치적 극단주의자들의 충돌이 점차 심화되는 환경 속에서 정치적 안정을 제공하지 못한 것에 대한 직접적인 결과라고 여겨지고 있습니다.\n\n 제정 복고에도 불구하고, 프랑스 전역에는 여전히 새로운 법적 지도자를 인정하지 않는 정치 단체들이 있습니다. [FRA.GetLeader] 측은 이제 이러한 문제들을 직면해야 하고, 어떤 식으로든 해결하려고 노력해야 할 것입니다."
+ france.1049.a:0 "흥미롭군."
+ france.1049.b:0 "황제 폐하꼐 영광을!"
+ 
+ france.1050.t:0 "[FRA.GetLeader]의 프랑스 왕위 주장"
+ france.1050.d:0 "프랑스-프로이센 전쟁에서 패배한 이후, 프랑스는 공화국이었습니다. 그러나 오늘 파리에서에서 거행된 대관식에서 [FRA.GetLeader] 측은 공식적으로 모든 프랑스인의 왕으로 즉위했습니다.\n\n프랑스에서 군주정의 성공은 공화국 정부가 정치적 극단주의자들의 충돌이 점차 심화되는 환경 속에서 정치적 안정을 제공하지 못한 것에 대한 직접적인 결과라고 여겨지고 있습니다.\n\n 왕정 복고에도 불구하고, 프랑스 전역에는 여전히 새로운 법적 지도자를 인정하지 않는 정치 단체들이 있습니다. [FRA.GetLeader] 측은 이제 이러한 문제들을 직면해야 하고, 어떤 식으로든 해결하려고 노력해야 할 것입니다."
+ france.1050.a:0 "흥미롭군."
+ france.1050.b:0 "국왕 폐하께 영광을!"
+ 
+ france.1051.t:0 "마르세유 시위!"
+ france.1051.d:0 "오늘 일찍이 마르세유로부터 나쁜 소식을 들었습니다. 우익 지지자들은 정치범 석방뿐만 아니라 현재의 기득권 세력에 대한 개혁을 요구하기 위해 시청 인근에 모였습니다."
+ france.1051.a:0 "시위하게 둬라."
+ 
+ france.1052.t:0 "보르도의 공산주의 시위자들!"
+ france.1052.d:0 "몇몇 저명한 공산주의 정치인들이 체포된 이후, 노동자들과 함께 좌파 지지자들은 보르도 시에서 시위를 벌였습니다. \n\n그들의 요구는 정치범들을 석방하라는 것이지만, 우리 정부뿐만 아니라 분석가들은 공산주의가 점점 인기가 없어짐에 따라 시위는 결국 사라질 것이라고 생각합니다."
+ france.1052.a:0 "시위하게 둬라."
+ 
+ france.1053.t:0 "파리 시위"
+ france.1053.d:0 "수도에서 시위가 벌어지고 있습니다. 정부가 취한 새로운 반민주적 조치에 불만을 품은 파리 시민들이 거리로 몰려나옵니다. 현재로써는, 우리는 손상된 기반시설과 경찰과의 광범위한 충돌에 대한 보고를 받았습니다."
+ france.1053.a:0 "시위는 사라질 것이다."
+ 
+ france.1054.t:0 "바이에른 망명자들"
+ france.1054.d:0 "독일 내전에서 붉은 군대가 패배한 후, 많은 공산주의자들뿐만 아니라 전투 병력들도 진격하는 프로이센 군대를 피해 프랑스로 피신하려고 시도했습니다.\n\n난민들을 어떻게 해야 합니까?"
+ france.1054.a:0 "망명을 받아들여라."
+ france.1054.b:0 "우리는 이 망명자들을 받아들일 수 없다."
+ 
+ france.1055.t:0 "트로츠키가 복무를 제안하다"
+ france.1055.d:0 "가장 유명한 공산주의 철학자 중 한 명인 레프 트로츠키는 프랑스를 위해 복무했습니다.\n\n트로츠키는 러시아 제국 정부로부터 바이에른으로 탈출하는 데 성공했고, 바이에른 정부가 붕괴했을 때, 프랑스로 향했습니다.\n\n그를 어떻게 해야 합니까?"
+ france.1055.a:0 "그의 복무를 받아들여라."
+ france.1055.b:0 "우린 그가 필요 없다."
+ 
+ france.1056.t:0 "프랑스가 남부 코뮌을 인정하다"
+ france.1056.d:0 ""
+ france.1056.a:0 ""
+ france.1056.b:0 ""
+ france.1056.c:0 ""
+ 
+ france.1057.t:0 "프랑스가 지원을 제의하다"
+ france.1057.d:0 ""
+ france.1057.a:0 "도움을 받아들여라."
+ france.1057.b:0 "우린 그들의 도움이 필요 없다."
+ 
+ france.1058.t:0 "프랑스가 개입을 제의하다"
+ france.1058.d:0 ""
+ france.1058.a:0 "제안을 받아들여라."
+ france.1058.b:0 "우리가 알아서 할 수 있다."
+ 
+ france.1059.t:0 "프랑스가 동맹을 제의하다"
+ france.1059.d:0 ""
+ france.1059.a:0 "세계혁명을 키워라!"
+ france.1059.b:0 "프랑스인들과의 동맹은 없다."
+ 
+ france.1060.t:0 "남부 코뮌이 받아들이다"
+ france.1060.d:0 "남부 코뮌 정부는 무기 공급에 대한 우리의 관대한 제안을 받아들였습니다. 곧 선적이 시작됩니다."
+ france.1060.a:0 "훌륭해!"
+ 
+ france.1061.t:0 "남부 코뮌이 거절하다"
+ france.1061.d:0 "남부 코뮌 정부는 무기 공급에 대한 우리의 제의를 거절했습니다. 그들의 불간섭주의 입장 때문입니다."
+ france.1061.a:0 "애석하군!"
+ 
+ france.1063.t:0 "프랑스 남부에서 일어난 국민주의 봉기!"
+ france.1063.d:0 "북부의 정권 교체에 불만을 품은 프랑스 남부는 이 문제를 직접 해결하기로 결정했습니다.\n\n공안위원회 조직과, 그리고 상당한 군 탈영과 함께, 혁명군은 프랑스 주요 도시의 주요 행정 건물과 통신 초소를 점령했습니다.\n\n그들의 요구는 파리 정부가 물러나서 반군측에 평화적으로 정권을 이양하라는 것입니다."
+ france.1063.a:0 "파시스트에게 죽음을!"
+
  fcolony.1_FNA.t:0 "프랑스령 북아프리카가 분할을 요구하다!"
  fcolony.1_FNA.d:0 ""
  fcolony.1.FNA.a:0 ""
@@ -550,3 +650,28 @@ FR_retake_FTU:0 "옛 마그레브 식민지 해방"
  fcolony.2.t:0 "식민지에서의 반란!"
  fcolony.2.d:0 "우리 땅에서 반란이 터졌습니다! 우리는 방금 해외의 우리 식민지로부터 전보를 받았습니다. 그 지방 민병대는 우체국과 중요한 철도망을 장악했습니다.\n혁명이 진행 중입니다..."
  fcolony.2.a:0 "저런!"
+
+ FRA_org_influence_5:0 "§R매우 강함§!"
+ FRA_org_influence_4:0 "§Y강함§!"
+ FRA_org_influence_3:0 "§Y보통§!"
+ FRA_org_influence_2:0 "§G약함§!"
+ FRA_org_influence_1:0 "§G매우 약함§!"
+ FRA_org_influence_0:0 "§C존재하지 않음§!"
+ 
+ FRA_rw_increase:0 "§G공안위원회의 영향력이 커질 것입니다.!§!"
+ FRA_cw_increase:0 "§G악시옹 프랑세즈의 영향력이 커질 것입니다!§!"
+ FRA_lw_increase:0 "§G마르크스주의자들의 영향력이 커질 것입니다!§!"
+ 
+ FRA_rw_decrease:0 "§C공안위원회의 영향력이 줄어들 것입니다!§!"
+ FRA_cw_decrease:0 "§C악시옹 프랑세즈의 영향력이 줄어들 것입니다!§!"
+ FRA_lw_decrease:0 "§C마르크스주의자들의 영향력이 줄어들 것입니다!§!"
+ 
+ FRA_3_cw_support:0 "§Y악시옹 프랑세즈§!에 대해 최소한 §Y보통§! 이상의 지원이 필요합니다."
+ FRA_3_lw_support:0 "§Y마르크스주의자들§!에 대해 최소한 §Y보통§! 이상의 지원이 필요합니다."
+ FRA_3_rw_support:0 "§Y공안위원회§!에 대해 최소한 §Y보통§! 이상의 지원이 필요합니다."
+ FRA_2_cw_support:0 "§Y악시옹 프랑세즈§!에 대해 최대한 §G약함§! 이상의 지원이 필요합니다."
+ FRA_2_lw_support:0 "§Y마르크스주의자들§!에 대해 최대한 §G약함§! 이상의 지원이 필요합니다."
+ FRA_2_rw_support:0 "§Y공안위원회§!에 대해 최대한 §G약함§! 이상의 지원이 필요합니다."
+ 
+ FRA_lw_warning:0 "§Y마르크스주의자들§!의 영향력이 §Y보통§! 이상이면 §R내전이 발발합니다!§!\n"
+ FRA_rw_warning:0 "§Y공안위원회§!의 영향력이 §Y보통§! 이상이면 §R내전이 발발합니다!§!\n"
