--- a/localisation/ger_focus_l_english.yml
+++ b/localisation/ger_focus_l_english.yml
@@ -17,17 +17,17 @@
  GER_got_mit_uns_desc:0 "'신께서 우리와 함께 하신다' 카이저가 독일을 하나님 대신 다스리고 카이저가 권력을 유지하는 한 하나님이 우리와 함께 하실 것이다!"
  GER_war_ITA:0 "이탈리아와의 전쟁"
  GER_war_ITA_desc:0 "이탈리아는 세계 대전 중에 우리를 배신했습니다. 만약 우리가 같은 것을 피하려면 우리는 그들을 선상에서 제거해야만 합니다."
- GER_air_innovations:0 "공군 혁신"
+ GER_air_innovations:0 "항공대 통합"
  GER_air_innovations_desc:0 "현대 전쟁은 하늘을 지배하지 않고는 이길 수 없습니다. 우리는 공군을 발전시키기 위해 전력을 다해야 합니다!"
  GER_mecanized:0 "기계화 주력"
  GER_mecanized_desc:0 "기계화는 현대전에 필수적이며 기계화에 힘을 쏟는 것이 핵심입니다!"
  GER_nav:0 "뇌격기 중점"
  GER_nav_desc:0 "해군 목표물에 대한 공습의 효능은 이미 1921년에 미국인들에 의해 입증되었습니다. 해군력과 전쟁을 할 생각이라면 이 공군의 분기를 소홀히 해서는 안 됩니다."
- GER_cas:0 "근접공중지원 개발"
+ GER_cas:0 "융커스 폭격기"
  GER_cas_desc:0 "적의 지상군을 섬멸하여 승리를 거둘 것입니다. 우리는 가깝고 깊은 목표물에 대한 전술적 타격으로 우리 군대를 지원하는 데 주력해야 합니다."
- GER_air_doctrine:0 "공중 우세"
- GER_air_doctrine_desc:0 "제국 항공부의 임무는 무엇보다 중요합니다. 루프트바페가 공중에서 우위를 차지하려면 세계에서 가장 발전된 공군이어야만 합니다."
- GER_bomber:0 "폭격기 주력"
+ GER_air_doctrine_goal:0 "공중 우세"
+ GER_air_doctrine_goal_desc:0 "제국 항공부의 임무는 무엇보다 중요합니다. 루프트바페가 공중에서 우위를 차지하려면 세계에서 가장 발전된 공군이어야만 합니다."
+ GER_bomber:0 "터빈 구동 제트"
  GER_bomber_desc:0 "적의 산업을 파괴함으로써 승리는 달성될 것입니다. 우리는 폭격기의 설계와 생산에 전력을 기울여야 합니다."
  GER_heavy_bomber:0 "중전투기 주력"
  GER_heavy_bomber_desc:0 "우리의 전술 및 전략 폭격기들은 목표지역과 후방까지 보호를 제공하기 위해 장거리 호위대를 필요로 합니다."
@@ -86,7 +86,7 @@
  GER_war_SWI_desc:0 "스위스는 가장 역겹고 비참한 사람들과 정치 체제를 가지고 있습니다. 우리는 마침내 새로운 독일의 이 치명적인 적들을 볼 수 있는 시간을 갖게 되었습니다."
  GER_depression_recovery:0 "불황 회복"
  GER_depression_recovery_desc:0 "우리나라는 대공황의 영향을 많이 받았으니, 우리는 회복하여 그 어느 때보다 독립하여 이러한 재난을 피할 것입니다." 
- GER_armed_forces:0 "국방군 투자"
+ GER_armed_forces:0 "육군 투자"
  GER_armed_forces_desc:0 "우리 군대는 작지만 가장 경험이 많고 훈련을 잘 받은 군대 중 하나입니다. 어쩌면 우리가 대전에 패했을지도 모르지만, 이 위험한 시대에 살아남기 위해서는 영광스러운 프로이센군의 복원이 필수적입니다."
  GER_prussian_eco:0 "독일 산업 재건"
  GER_prussian_eco_desc:0 "지난 20년은 우리에게 쉽지 않았습니다. 처음에는 대전에 패했고, 그 다음에는 내전 그리고 지금은 대공황입니다. 그러나 독일인으로서 우리는 의지가 강하며 한때 잃었던 우리의 영광스러운 독일을 재건할 것입니다."
@@ -258,13 +258,13 @@
  GER_professional_desc:0 "재무장에 더 많은 돈을 투자하는 것이 중요합니다. 우리는 직원들이 유능하고 충성스러워야 하는 만큼 그들에게도 관심을 기울여야 합니다."
  GER_freikorps:0 "자유군단"
  GER_freikorps_desc:0 "자유군단은 독일군에서 가장 충성스러운 병사들입니다. 그들은 남북전쟁에서 우리 편에서 싸웠고 안정적인 정부 수립을 도왔습니다. 우리는 그들의 지휘권을 부활시켜 국방군에 통합시켜야 합니다."
- GER_veterans:0 "독일 전쟁 전통"
+ GER_veterans:0 "파격적인 전술"
  GER_veterans_desc:0 "프로이센 문화와 역사는 전쟁이 지배하고 있습니다. 이것 때문에 우리는 항상 전쟁에서 가장 좋은 계획과 최신 전술을 가지고 있었습니다."
  GER_reunification:0 "평화 약속"
  GER_reunification_desc:0 "프랑스-영국이 세계를 지배하고 있는 상황에서, 우리는 그들의 우세를 전복시킬 수 없을 것 같습니다. 아마도 우리가 그들과 함께 한다면 독일 사람들과 세계 다른 나라들에게 더 좋을 것입니다."
  GER_defensive_construction:0 "지크프리트 방어선"
- GER_defensive_construction_desc:0 "바이에른 공산주의 팽창으로부터 우리를 보호하기 위해 지크프리트 방어선을 건설해야 합니다."
- GER_defense_army:0 "방어 중점"
+ GER_defensive_construction_desc:0 "지그프리드 방어선은 작센에서 루르까지 이를 것입니다. 이 방어선은 망할 놈의 공산주의자들이 우리 영토에 들어오지 못하게 할 겁니다."
+ GER_defense_army:0 "모델의 계획"
  GER_defense_army_desc:0 "방어적 교리를 채택하고 현대전에서 방어할 수 있도록 첨단 방어 전술을 연구합니다."
  GER_slot1:0 "추가 연구 슬롯"
  GER_slot1_desc:0 "우리나라의 급속한 산업화는 우리가 추구해야 할 연구개발의 새로운 기회를 열어주었습니다."
@@ -284,7 +284,7 @@
  PRU_war_FRA_desc:0 "알자스-로렌의 상실은 독일 국민의 명예에 오점이 되고 정의롭고 정당한 전쟁을 통해서만 우리는 이것을 복수할 수 있습니다."
  GER_anschluss_sax:0 "작센 합병"
  GER_anschluss_sax_desc:0 "우리 군대의 확장과 함께 잃어버린 제국의 통일을 시작할 때입니다."
- GER_offense_army:0 "공세 중점"
+ GER_offense_army:0 "할더의 전략"
  GER_Offense_army_desc:0 "We should concentrate our efforts on building the army which is capable of defeating any aggressor. As we know, best defense is the offense."
  GER_ludendorff_line:0 "동부 방벽"
  GER_ludendorff_line_desc:0 "러시아와 동방의 잠재적 공격을 막기 위한 동방의 주요 요새선."
@@ -296,7 +296,7 @@
  GER_anschluss_wsm_desc:0 "저지 독일의 통합으로 우리의 통일을 계속 이어나가야 합니다."
  GER_join_RUS:0 "쾨니히 조약"
  GER_join_RUS_desc:0 "프랑스 침공을 계획한다면 동부 국경을 확보해야 합니다. 러시아는 발칸의 영향력은 물론 동아시아의 영향력까지 되찾겠다는 의지를 밝혔습니다. 이번 기회에 불가침 조약인 쾨니히 조약을 요청할 수도 있습니다."
- GER_fighter:0 "전투기 주력"
+ GER_fighter:0 "포커 채택"
  GER_fighter_desc:0 "현대 전쟁은 하늘을 지배하지 않고는 이길 수 없습니다. 우리는 공군을 발전시키기 위해 전력을 다해야 합니다!"
  GER_cruiser_effort:0 "순양함 주력"
  GER_cruiser_effort_desc:0 "순양함은 구축함의 속도와 민첩성, 전함의 힘과 화력을 제공하는 절충안입니다."
@@ -308,7 +308,7 @@
  GER_befriend_SWE_desc:0 "우리의 주요 교역 상대는 스웨덴입니다. 아마도 우리는 우리의 동맹의 추가 확대를 위해 스웨덴 정부에 접근해야 할 것입니다."
  GER_befriend_AUS:0 "오스트리아와의 친선"
  GER_befriend_AUS_desc:0 "우리는 오스트리아와의 관계를 회복하고 우리의 오래되고 충성스러운 동맹국에게 동맹을 제안해야 합니다."
- GER_army_innovations:0 "육군 혁신"
+ GER_army_innovations:0 "육군 확대"
  GER_army_innovations_desc:0 "독일은 가장 위대한 전쟁사를 가지고 있습니다. 우리는 이러한 추세를 지속하고 새로운 전술과 전쟁의 유형을 개발해야 합니다."
  GER_destroyer_effort:0 "구축함 계획"
  GER_destroyer_effort_desc:0 "해군용어로 구축함은 함대, 호위함 또는 전투 그룹에서 더 큰 함정을 호위하고 더 작은 강력한 단거리 공격자들로부터 그들을 방어하기 위한 빠르고 기동성 있는 장해함입니다."
