--- a/localisation/ger_ideas_l_english.yml
+++ b/localisation/ger_ideas_l_english.yml
@@ -53,4 +53,5 @@
   ideology_boosting_communism:0 "공산주의 인기도 증가"
   GER_influence_down_tt:0 "바이에른 영향력 증가"
   GRK_influence_up_tt:0 "프로이센 영향력 증가"
+  more_motors:0 "개선된 차량화 생산"
  
