--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -249,8 +249,8 @@
  HUN_greater_state_neutrality:0 "대헝가리"
  HUN_greater_state_fascism:0 "대헝가리"
  HUN_greater_state_democratic:0 "헝가리 연방공화국"
- HUN_greater_state_communism:0 "발칸 사회주의 연방"
- HUN_greater_state_socialist_:0 "발칸 사회주의 연방"
+ HUN_greater_state_communism:0 "도나우 인민공화국"
+ HUN_greater_state_socialist_:0 "도나우 사회주의 공화국"
  HUN_EMPIRE_neutrality_DEF:0 "오스트리아-헝가리"
  HUN_EMPIRE_fascism_DEF:0 "오스트리아-헝가리 제국"
  HUN_EMPIRE_democratic_DEF:0 "도나우 연방"
@@ -258,8 +258,8 @@
  HUN_greater_state_neutrality_DEF:0 "대헝가리"
  HUN_greater_state_fascism_DEF:0 "대헝가리"
  HUN_greater_state_democratic_DEF:0 "헝가리 연방공화국"
- HUN_greater_state_communism_DEF:0 "발칸 사회주의 연방"
- HUN_greater_state_socialist_DEF:0 "발칸 사회주의 연방"
+ HUN_greater_state_communism_DEF:0 "도나우 인민공화국"
+ HUN_greater_state_socialist_DEF:0 "도나우 사회주의 공화국"
  SPQR_UNIFIED_neutrality:0 "로마 왕국"
  SPQR_UNIFIED_fascism:0 "로마 제국"
  SPQR_UNIFIED_democratic:0 "로마 공화국"
