--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -103,6 +103,8 @@
  VICTORY_POINTS_11586:0 "베오그라드"
  VICTORY_POINTS_3882:0 "스코페"
  VICTORY_POINTS_3924:0 "스플리트"
+ VICTORY_POINTS_3943:0 "차라"
+ VICTORY_POINTS_6889:0 "두브로브니크"
  VICTORY_POINTS_9627:0 "라이바흐"
  VICTORY_POINTS_11581:0 "자그레브"
  VICTORY_POINTS_11899:0 "사라예보"
@@ -125,6 +127,7 @@
  VICTORY_POINTS_947:0 "부르사"
  VICTORY_POINTS_4112:0 "이즈미르"
  VICTORY_POINTS_9893:0 "가지안테프"
+ VICTORY_POINTS_9894:0 "모스타르"
  VICTORY_POINTS_9932:0 "트라브존"
  VICTORY_POINTS_3938:0 "마드리드"
  VICTORY_POINTS_9764:0 "바르셀로나"
@@ -276,6 +279,20 @@
  VICTORY_POINTS_7137:0 "난닝"
  VICTORY_POINTS_7191:0 "항저우"
  VICTORY_POINTS_7222:0 "허페이"
+ VICTORY_POINTS_1083:0 "안칭"
+ VICTORY_POINTS_12067:0 "옌청"
+ VICTORY_POINTS_1001:0 "벙부"
+ VICTORY_POINTS_7167:0 "한커우"
+ VICTORY_POINTS_12467:0 "한양"
+ VICTORY_POINTS_1612:0 "징저우"
+ VICTORY_POINTS_11931:0 "뤄양"
+ VICTORY_POINTS_10446:0 "시장"
+ VICTORY_POINTS_7656:0 "카이펑"
+ VICTORY_POINTS_7109:0 "바오딩"
+ VICTORY_POINTS_1188:0 "스먼"
+ VICTORY_POINTS_12403:0 "다퉁"
+
+ VICTORY_POINTS_12055:0 "쉬저우"
  VICTORY_POINTS_9958:0 "정저우"
  VICTORY_POINTS_10000:0 "칭다오"
  VICTORY_POINTS_10068:0 "톈진"
@@ -330,7 +347,17 @@
  VICTORY_POINTS_4608:0 "수라바야"
  VICTORY_POINTS_4652:0 "메단"
  VICTORY_POINTS_10237:0 "발릭파판"
+ VICTORY_POINTS_1316:0 "싱카왕"
+ VICTORY_POINTS_10138:0 "반자르마신"
+ VICTORY_POINTS_7415:0 "타라칸"
  VICTORY_POINTS_10263:0 "마카사르"
+ VICTORY_POINTS_4564:0 "큰다리"
+ VICTORY_POINTS_10153:0 "마나도"
+ VICTORY_POINTS_1574:0 "암본"
+ VICTORY_POINTS_4273:0 "발리"
+ VICTORY_POINTS_1355:0 "쿠팡"
+ VICTORY_POINTS_12190:0 "딜리"
+
  VICTORY_POINTS_12268:0 "팔렘방"
  VICTORY_POINTS_12371:0 "홀란디아"
  VICTORY_POINTS_7859:0 "캔버라"
@@ -500,6 +527,8 @@
  VICTORY_POINTS_7302:0 "수바"
  VICTORY_POINTS_12140:0 "괌"
  VICTORY_POINTS_12237:0 "라에"
+ VICTORY_POINTS_12240:0 "웨와크"
+ VICTORY_POINTS_10260:0 "밀른 만"
  VICTORY_POINTS_13021:0 "타라와"
  VICTORY_POINTS_13025:0 "이오지마"
  VICTORY_POINTS_13028:0 "야프"
@@ -515,6 +544,13 @@
  VICTORY_POINTS_1319:0 "쿤밍"
  VICTORY_POINTS_8049:0 "옌안"
  VICTORY_POINTS_1519:0 "타이위안"
+ VICTORY_POINTS_12344:0 "양취안"
+ VICTORY_POINTS_4174:0 "타이위안"
+ VICTORY_POINTS_10043:0 "지닝"
+ VICTORY_POINTS_10763:0 "쭌이"
+ VICTORY_POINTS_4205:0 "웨이하이웨이"
+ VICTORY_POINTS_1104:0 "옌타이"
+ VICTORY_POINTS_1124:0 "린이"
  VICTORY_POINTS_377:0 "카디프"
  VICTORY_POINTS_495:0 "도르트문트"
  VICTORY_POINTS_540:0 "플리머스"
